Fix unwanted overflow in DashTable header columns
when action button Icons are present

--- a/components/dash-table/src/dash-table/components/Table/Table.less
+++ b/components/dash-table/src/dash-table/components/Table/Table.less
@@ -687,9 +687,16 @@
     	}
 
 	    .dash-spreadsheet-inner {
+            .dash-header>div {
+                display: flex;
+            }
+
+            .column-header-name {
+                margin-left: auto;
+            }
+
             [class^='column-header--'], [class^='dash-filter--'] {
                 cursor: pointer;
-                float: left;
             }
 
             .column-header--select {
